--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+code,
+#result {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#app {
+  display: flex;
+  flex-direction: row;
+  margin: 30px;
+}
+
+#result {
+  margin-top: 30px;
+}
+
+aside {
+  flex: 0 1;
+  margin-right: 30px;
+}
+
+section {
+  flex: 1;
+}
+
+.token {
+  display: inline-block;
+  border-radius: 0.75em;
+  background-color: #07c;
+  color: #fff;
+  padding: 0 10px;
+  line-height: 1.5;
+  white-space: nowrap;
+  font-size: 13px;
+  user-select: none;
+}
+
+.token-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.token-list li + li {
+  margin-top: 5px;
 }
