--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,14 @@ section {
   user-select: none;
 }
 
+/*
+  Required for clicked token to be recognized by Parchment.
+  If a child element receives the click, Parchment is unable to find the clicked embed.
+*/
+.token * {
+  pointer-events: none;
+}
+
 .token-list {
   list-style-type: none;
   padding-left: 0;
